spade-tests/src/snapshots/spade_tests__wordlength_inference__inner_functions_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn g() -> int<3> { 0 }
fn f<A, B>(a: int<2>) -> int<0> {
    g() + a
}
entity main(clk: clock, rst: bool) -> int<0> { f(0) }


error: Word length mismatch. Got 2 bits but expected 0 bits
  ┌─ testinput:5:48
  │
5 │ entity main(clk: clock, rst: bool) -> int<0> { f(0) }
  │                                                ^^^^ Got 2 bits, expected 0


